--- a/profilepractice.html
+++ b/profilepractice.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<!-- Was supposed to help with making the screen dynamic but didn't really work on my personal Page -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="practice.css">
+</head>
+
 <h1>jQuery & CSS3 Skills Bar</h1>
 
 <div class="skillbar clearfix " data-percent="20%">
