--- a/profilepractice.html
+++ b/profilepractice.html
@@ -5,6 +5,16 @@
 <!-- Was supposed to help with making the screen dynamic but didn't really work on my personal Page -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="practice.css">
+
+<script>
+jQuery(document).ready(function(){
+	jQuery('.skillbar').each(function(){
+		jQuery(this).find('.skillbar-bar').animate({
+			width:jQuery(this).attr('data-percent')
+		},6000);
+	});
+});
+</script>
 </head>
 
 <h1>jQuery & CSS3 Skills Bar</h1>
