--- a/profilepractice.html
+++ b/profilepractice.html
@@ -5,7 +5,7 @@
 <!-- Was supposed to help with making the screen dynamic but didn't really work on my personal Page -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="practice.css">
-
+	
 <script>
 jQuery(document).ready(function(){
 	jQuery('.skillbar').each(function(){
@@ -18,7 +18,7 @@ jQuery(document).ready(function(){
 </head>
 
 <h1>jQuery & CSS3 Skills Bar</h1>
-
+<link rel="stylesheet" type="text/css" href="practice.css">
 <div class="skillbar clearfix " data-percent="20%">
 	<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
 	<div class="skillbar-bar" style="background: #e67e22;"></div>
@@ -60,5 +60,7 @@ jQuery(document).ready(function(){
 	<div class="skillbar-bar" style="background: #4288d0;"></div>
 	<div class="skill-bar-percent">70%</div>
 </div> <!-- End Skill Bar -->
+	
+	
 
 <p><strong>SOURCE :</strong> http://w3lessons.info/2013/06/04/skill-bar-with-jquery-css3/</p>
