--- a/profilepractice.html
+++ b/profilepractice.html
@@ -5,3 +5,104 @@
 <!-- Was supposed to help with making the screen dynamic but didn't really work on my personal Page -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="practice.css">
+
+<!-- Minimalist webpage inspiration from: Awwwards compilation of best minimal webpages: https://www.awwwards.com/websites/minimal/ -->
+<h2>Sarah's Profile</h2> <!-- Robyn changed type of header and adjusted title -->
+
+<div id="image"> <!-- Robyn added image div and temp image -->
+<img src="/images/prof_sarah.jpg" alt="profile_sarah" class="align-left">
+<!-- Minimalist webpage inspiration from: Awwwards compilation of best minimal webpages: https://www.awwwards.com/websites/minimal/ -->
+</div>
+<div class="profile"> <!-- Robyn changed div to match with CSS stylesheet -->
+<!--Dragon’s Dogma and other RPG Charater Profiles for Inspiration -->
+<p> Just your average archer, dragon hunter extraordinair with her trusty hell-hound Captain Frederick Wentworth at her side to solve all of your goulish creature conundrums. I do have a soft spot for some of your more harmless leviathan and adjusting werewolf but otherwise I am the ruthless monster slayer here to save you Saturday from certain savagery in the Middle Nomadian District of Noom. 
+</p>
+<!-- Image of Fred Maybe? smaller sized-->
+<p> Looking to work more in the Leviathan and Wendigo sectors, but currently enjoying a research sabattical studying the shapeshifting abilities of the Therians and Selkies.
+</p>
+<p> My tamaniu is a great bear, my star sign is picese and my Meyers Briggs is INFJ. If you think I would be suitable for any of your upcoming quests please request me through our contact form. Pricing and travel details to be arranged on request. I also work with colleagues of mine on more extensive ventures
+</p>
+</div>
+<div id="skills"> <!-- Robyn added skills div around skill bar -->
+<!-- Sarah Bencic-->
+<!--skills table or with those scales -->
+<!-- https://codepen.io/tamak/pen/hzEer skill bars animted with Javascript thought it could be a good way to use javascript and show people's "skills"-->
+<div class="skillbar clearfix " data-percent="100%">
+	<div class="skillbar-title" style="background: #d35400;"><span>Archery</span></div>
+	<div class="skillbar-bar" style="background: #e67e22;"></div>
+	<div class="skill-bar-percent">100%</div>
+</div> <!-- End Skill Bar Archery - SarahBencic -->
+
+<div class="skillbar clearfix " data-percent="87.6%">
+	<div class="skillbar-title" style="background: #2980b9;"><span>Falconry</span></div>
+	<div class="skillbar-bar" style="background: #3498db;"></div>
+	<div class="skill-bar-percent">87.6%</div>
+</div> <!-- End Skill Bar Falconry -  SarahBencic-->
+
+<div class="skillbar clearfix " data-percent="70.8%">
+	<div class="skillbar-title" style="background: #2c3e50;"><span>Bush Craft</span></div>
+	<div class="skillbar-bar" style="background: #2c3e50;"></div>
+	<div class="skill-bar-percent">70.8%</div>
+</div> <!-- End Skill Bar - Bush Craft Sarah Bencic-->
+
+<div class="skillbar clearfix " data-percent="91%">
+	<div class="skillbar-title" style="background: #46465e;"><span>Tracking</span></div>
+	<div class="skillbar-bar" style="background: #5a68a5;"></div>
+	<div class="skill-bar-percent">91%</div>
+</div> <!-- End Skill Bar - Tracking Sarah Bencic-->
+
+<div class="skillbar clearfix " data-percent="60%">
+	<div class="skillbar-title" style="background: #333333;"><span>Epithelialization</span></div>
+	<div class="skillbar-bar" style="background: #525252;"></div>
+	<div class="skill-bar-percent">60%</div>
+</div> <!-- End Skill Bar - Epithelialization Sarah Bencic -->
+
+<div class="skillbar clearfix " data-percent="20%">
+	<div class="skillbar-title" style="background: #27ae60;"><span>Healing</span></div>
+	<div class="skillbar-bar" style="background: #2ecc71;"></div>
+	<div class="skill-bar-percent">20%</div>
+</div> <!-- End Skill Bar - Healing Sarah Bencic-->
+
+<div class="skillbar clearfix " data-percent="100%">
+	<div class="skillbar-title" style="background: #124e8c;"><span>Botany</span></div>
+	<div class="skillbar-bar" style="background: #4288d0;"></div>
+	<div class="skill-bar-percent">100%</div>
+</div> <!-- End Skill Bar - Botany Sarah Bencic-->
+
+<!--SOURCE http://w3lessons.info/2013/06/04/skill-bar-with-jquery-css3/</>-->
+<!-- Sarah Bencic-->
+	</div> <!-- Closing div for skills id -->	
+<div class= "simpleskills">
+ .wrapper
+            
+    .skillbar(data-percent="55%")
+        .skillbar-title Web design
+        .skill-bar-percent 55%
+        .skillbar-bar(style="width: 55%")
+
+
+    .skillbar(data-percent="80%")
+        .skillbar-title development
+        .skill-bar-percent 80%
+        .skillbar-bar(style="width: 80%")
+
+
+    .skillbar(data-percent="40%")
+        .skillbar-title Photography
+        .skill-bar-percent 40%
+        .skillbar-bar(style="width: 40%")
+
+    .skillbar(data-percent="70%")
+        .skillbar-title branding
+        .skill-bar-percent 70%
+        .skillbar-bar(style="width: 70%")
+  </div>
+<!--Robyn moved Monster Hunter Ltd. to the top-->
+
+
+</div> <!--Robyn added closing div tag for id="page"-->
+	<div class="footer">
+	<p class="footer"> Have a monster problem? Call Monster Hunters at: 1-800-NEEDHELP</p>
+</div>
+</body>
+</html>
