--- a/profilepractice.html
+++ b/profilepractice.html
@@ -27,31 +27,41 @@
 <!--skills table or with those scales -->
 <!-- https://codepen.io/tamak/pen/hzEer skill bars animted with Javascript thought it could be a good way to use javascript and show people's "skills"-->
 
-<div class= "simpleskills">
- .wrapper
-            
-    .skillbar(data-percent="55%")
-        .skillbar-title Web design
-        .skill-bar-percent 55%
-        .skillbar-bar(style="width: 55%")
-
-
-    .skillbar(data-percent="80%")
-        .skillbar-title development
-        .skill-bar-percent 80%
-        .skillbar-bar(style="width: 80%")
-
-
-    .skillbar(data-percent="40%")
-        .skillbar-title Photography
-        .skill-bar-percent 40%
-        .skillbar-bar(style="width: 40%")
-
-    .skillbar(data-percent="70%")
-        .skillbar-title branding
-        .skill-bar-percent 70%
-        .skillbar-bar(style="width: 70%")
+<div class="page-wrap">
+  
+  <h2>With Divs</h2>
+  
+  <div class="skill-bar-container">
+    <span class="skill-name">Something</span>
+    <span class="skill-percent">100%</span>
+    <span class="skill-bar level5"></span>
   </div>
+
+  <div class="skill-bar-container">
+    <span class="skill-name">Something</span>
+    <span class="skill-percent">80%</span>
+    <span class="skill-bar level4"></span>
+  </div>
+
+  <div class="skill-bar-container">
+    <span class="skill-name">Something</span>
+    <span class="skill-percent">60%</span>
+    <span class="skill-bar level3"></span>
+  </div>
+
+  <div class="skill-bar-container">
+    <span class="skill-name">Something</span>
+    <span class="skill-percent">40%</span>
+    <span class="skill-bar level2"></span>
+  </div>
+
+  <div class="skill-bar-container">
+    <span class="skill-name">Something</span>
+    <span class="skill-percent">20%</span>
+    <span class="skill-bar level1"></span>
+  </div>
+
+</div>
 <!--Robyn moved Monster Hunter Ltd. to the top-->
 
 
