--- a/profilepractice.html
+++ b/profilepractice.html
@@ -5,7 +5,8 @@
 <!-- Was supposed to help with making the screen dynamic but didn't really work on my personal Page -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="practice.css">
-
+</head>
+<body>
 <!-- Minimalist webpage inspiration from: Awwwards compilation of best minimal webpages: https://www.awwwards.com/websites/minimal/ -->
 <h2>Sarah's Profile</h2> <!-- Robyn changed type of header and adjusted title -->
 
