--- a/MyMapsTour.html
+++ b/MyMapsTour.html
@@ -1,1 +1,26 @@
-https://tourbuilder.withgoogle.com/tour/ahJzfmd3ZWItdG91cmJ1aWxkZXJyEQsSBFRvdXIYgIDgwJnslwgM
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<link rel="stylesheet" type="text/css" href="WebPageSS1.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="WebPageSS1.css">
+<title>Sarah Bencic ~ About Me</title>
+</head>
+<body>
+  
+<div class="topnav">
+<link rel="stylesheet" type="text/css" href="WebPageSS1.css">
+	<div class="topnav">
+	<a href="index.htm" class="topnav">Home</a>
+	<a href="AboutMe.htm" class="topnav">About Me</a>
+	<a href="Portfolio.htm" class="topnav">Portfolio</a>
+	<a href="Contact.htm" class="topnav">Contact</a>
+	</div>
+</div>
+  
+<a href="https://tourbuilder.withgoogle.com/tour/ahJzfmd3ZWItdG91cmJ1aWxkZXJyEQsSBFRvdXIYgIDgwJnslwgM">Visit my Tour of Sheffield Gardens</a>
+  
+ 
+</body>
+<html>
