--- a/MyMapsTour.html
+++ b/MyMapsTour.html
@@ -9,18 +9,12 @@
 </head>
 <body>
   
-<div class="topnav">
-<link rel="stylesheet" type="text/css" href="WebPageSS1.css">
-	<div class="topnav">
-	<a href="index.htm" class="topnav">Home</a>
-	<a href="AboutMe.htm" class="topnav">About Me</a>
-	<a href="Portfolio.htm" class="topnav">Portfolio</a>
-	<a href="Contact.htm" class="topnav">Contact</a>
-	</div>
-</div>
+	<h1> My Maps Webpage Practice </h1>
+	<p> Bellow are practice elements for my class in Web GIS </p>
   
 <a href="https://tourbuilder.withgoogle.com/tour/ahJzfmd3ZWItdG91cmJ1aWxkZXJyEQsSBFRvdXIYgIDgwJnslwgM">Visit my Tour of Sheffield Gardens</a>
-  
+
+<iframe src="https://www.google.com/maps/d/embed?mid=17dGpxyUTUTzay36drylXv-6s6BlUmgC_" width="640" height="480"></iframe>
  
 </body>
 <html>
