--- a/profilepractice.html
+++ b/profilepractice.html
@@ -1,74 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<!-- Was supposed to help with making the screen dynamic but didn't really work on my personal Page -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="practice.css">
-</head>
-<body>
-<!-- Minimalist webpage inspiration from: Awwwards compilation of best minimal webpages: https://www.awwwards.com/websites/minimal/ -->
-<h2>Sarah's Profile</h2> <!-- Robyn changed type of header and adjusted title -->
-
-<div id="image"> <!-- Robyn added image div and temp image -->
-<img src="/images/prof_sarah.jpg" alt="profile_sarah" class="align-left">
-<!-- Minimalist webpage inspiration from: Awwwards compilation of best minimal webpages: https://www.awwwards.com/websites/minimal/ -->
-</div>
-<div class="profile"> <!-- Robyn changed div to match with CSS stylesheet -->
-<!--Dragon’s Dogma and other RPG Charater Profiles for Inspiration -->
-<p> Just your average archer, dragon hunter extraordinair with her trusty hell-hound Captain Frederick Wentworth at her side to solve all of your goulish creature conundrums. I do have a soft spot for some of your more harmless leviathan and adjusting werewolf but otherwise I am the ruthless monster slayer here to save you Saturday from certain savagery in the Middle Nomadian District of Noom. 
-</p>
-<!-- Image of Fred Maybe? smaller sized-->
-<p> Looking to work more in the Leviathan and Wendigo sectors, but currently enjoying a research sabattical studying the shapeshifting abilities of the Therians and Selkies.
-</p>
-<p> My tamaniu is a great bear, my star sign is picese and my Meyers Briggs is INFJ. If you think I would be suitable for any of your upcoming quests please request me through our contact form. Pricing and travel details to be arranged on request. I also work with colleagues of mine on more extensive ventures
-</p>
-</div>
-<!-- Sarah Bencic-->
-<!--skills table or with those scales -->
-<!-- https://codepen.io/tamak/pen/hzEer skill bars animted with Javascript thought it could be a good way to use javascript and show people's "skills"-->
-
-<div class="page-wrap">
-  
-  <h2>With Divs</h2>
-  
-  <div class="skill-bar-container">
-    <span class="skill-name">Something</span>
-    <span class="skill-percent">100%</span>
-    <span class="skill-bar level5"></span>
-  </div>
-
-  <div class="skill-bar-container">
-    <span class="skill-name">Something</span>
-    <span class="skill-percent">80%</span>
-    <span class="skill-bar level4"></span>
-  </div>
-
-  <div class="skill-bar-container">
-    <span class="skill-name">Something</span>
-    <span class="skill-percent">60%</span>
-    <span class="skill-bar level3"></span>
-  </div>
-
-  <div class="skill-bar-container">
-    <span class="skill-name">Something</span>
-    <span class="skill-percent">40%</span>
-    <span class="skill-bar level2"></span>
-  </div>
-
-  <div class="skill-bar-container">
-    <span class="skill-name">Something</span>
-    <span class="skill-percent">20%</span>
-    <span class="skill-bar level1"></span>
-  </div>
-
-</div>
-<!--Robyn moved Monster Hunter Ltd. to the top-->
-
-
-</div> <!--Robyn added closing div tag for id="page"-->
-	<div class="footer">
-	<p class="footer"> Have a monster problem? Call Monster Hunters at: 1-800-NEEDHELP</p>
-</div>
-</body>
+<html>
+  <head>
+    <style>
+      /* Set the size of the div element that contains the map */
+      #map {
+        height: 400px;  /* The height is 400 pixels */
+        width: 100%;  /* The width is the width of the web page */
+       }
+    </style>
+  </head>
+  <body>
+    <h3>My Google Maps Demo</h3>
+    <!--The div element for the map -->
+    <div id="map"></div>
+    <script>
+// Initialize and add the map
+function initMap() {
+  // The location of Uluru
+  var uluru = {lat: -25.344, lng: 131.036};
+  // The map, centered at Uluru
+  var map = new google.maps.Map(
+      document.getElementById('map'), {zoom: 4, center: uluru});
+  var marker = new google.maps.Marker({position: uluru, map: map});
+}
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASnepjuKIdzwhR08T5d&callback=initMap">
+    </script>
+  </body>
 </html>
