--- a/jvscrptapipractice.html
+++ b/jvscrptapipractice.html
@@ -26,6 +26,7 @@
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: -12.969183, lng: 40.533586}, 
           zoom: 18
+          mapTypeId: 'satellite'
          
         });
       }
