--- a/WK4jasonpractice.html
+++ b/WK4jasonpractice.html
@@ -1,96 +1,1 @@
-<script>
-  {
-  "type": "FeatureCollection",
-  "features": [
-    {
-      "type": "Feature",
-      "properties": {
-        "marker-color": "#008000",
-        "marker-size": "medium",
-        "marker-symbol": "circle-stroked"
-      },
-      "geometry": {
-        "type": "Point",
-        "coordinates": [
-          40.53234100341797,
-          -12.969132975909755
-        ]
-      }
-    },
-    {
-      "type": "Feature",
-      "properties": {
-        "stroke": "#804040",
-        "stroke-width": 2,
-        "stroke-opacity": 1,
-        "fill": "#ff0000",
-        "fill-opacity": 0.5
-      },
-      "geometry": {
-        "type": "Polygon",
-        "coordinates": [
-          [
-            [
-              40.53336560726165,
-              -12.969038879493565
-            ],
-            [
-              40.53330659866333,
-              -12.96913820348738
-            ],
-            [
-              40.53336560726165,
-              -12.969180024104505
-            ],
-            [
-              40.533440709114075,
-              -12.969106838019936
-            ],
-            [
-              40.53336560726165,
-              -12.969038879493565
-            ]
-          ]
-        ]
-      }
-    },
-    {
-      "type": "Feature",
-      "properties": {
-        "stroke": "#ff0000",
-        "stroke-width": 2,
-        "stroke-opacity": 1
-      },
-      "geometry": {
-        "type": "LineString",
-        "coordinates": [
-          [
-            40.533199310302734,
-            -12.969430947659555
-          ],
-          [
-            40.52650451660156,
-            -12.98967128040339
-          ],
-          [
-            32.55523681640625,
-            -25.970391488395922
-          ],
-          [
-            28.092041015625,
-            -26.20473426710759
-          ],
-          [
-            8.701171874999998,
-            50.078294547389426
-          ],
-          [
-            -79.376220703125,
-            43.65197548731187
-          ]
-        ]
-      }
-    }
-  ]
-}
-</script>
+<style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Journey Home-Copy" src="//fleming.maps.arcgis.com/apps/Embed/index.html?webmap=64b43f0770134183a11c43b53b3736d9&extent=-136.6253,-42.5935,123.0036,68.5081&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light"></iframe></div>
