--- a/CanadaDemoMap.html
+++ b/CanadaDemoMap.html
@@ -65,13 +65,13 @@ section:after {
 <body>
 
 <header>
-  <h2>Cities</h2>
+  <h2>Canadian Provinces Map</h2>
 </header>
 
 <section>
   <nav>
-       <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+       <h1>Let's learn about the Canadian provinces</h1>
+    <p>Canada has 10 provinces and 3 territories</p>
     <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
   </nav>
   
