--- a/CanadaDemoMap.html
+++ b/CanadaDemoMap.html
@@ -72,7 +72,7 @@ section:after {
   <nav>
        <h1>Let's learn about the Canadian provinces</h1>
     <p>Canada has 10 provinces and 3 territories</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <p>Can you name all the provinces and their capitals?</p>
   </nav>
   
   <article>
