--- a/CanadaDemoMap.html
+++ b/CanadaDemoMap.html
@@ -76,7 +76,7 @@ section:after {
   </nav>
   
   <article>
-<style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="CanadaDemo1" src="//fleming.maps.arcgis.com/apps/Embed/index.html?webmap=ff73756d349c4733a071318ad8828459&extent=-155.9613,38.9167,-26.1468,75.4172&home=true&zoom=true&previewImage=false&scale=true&search=true&searchextent=true&legend=true&disable_scroll=true&theme=light"></iframe></div>
+<style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="CanadaDemo2" src="//fleming.maps.arcgis.com/apps/Embed/index.html?webmap=c21b6e4370b24d9489a2447986c5829b&extent=-180,21.945,5.0713,85.2006&home=true&zoom=true&previewImage=false&scale=true&search=true&searchextent=true&legend=true&basemap_toggle=true&alt_basemap=topo&disable_scroll=true&theme=light&marker=-75.691;45.422;;;;"></iframe></div>
   </article>
 </section>
 
