--- a/Week9.html
+++ b/Week9.html
@@ -6,3 +6,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
+
+<body>
+<div id='map' style='width: 400px; height: 300px;'></div>
+<script>
+mapboxgl.accessToken = 'pk.eyJ1Ijoic2JlbmNpYyIsImEiOiJjazg0dnJzangwMGhxM2ZudzcyZGowZDVoIn0.qB5E36ZD3QkceugGRebfmw';
+var map = new mapboxgl.Map({
+container: 'map',
+style: 'mapbox://styles/mapbox/streets-v11'
+});
+</script>
+</body>
+</head>
