--- a/Week9.html
+++ b/Week9.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
+</head>
 
 <body>
 <div id='map' style='width: 400px; height: 300px;'></div>
@@ -17,4 +18,4 @@ style: 'mapbox://styles/mapbox/streets-v11'
 });
 </script>
 </body>
-</head>
+</html>
