--- a/MapBoxTrial.html
+++ b/MapBoxTrial.html
@@ -1,15 +1,48 @@
+<!DOCTYPE html>
 <html>
 <head>
-<script src='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
-<link href='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
+<meta charset="utf-8" />
+<title>Geom99: Add ArcGIS Map Service source Practice Using Mapbox</title>
+<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+<script src="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css" rel="stylesheet" />
+<style>
+	body { margin: 0; padding: 0; }
+	#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+</style>
 </head>
-
 <body>
-<div id='map' style='width: 400px; height: 300px;'></div>
+<div id="map"></div>
 <script>
-  mapboxgl.accessToken = 'pk.eyJ1Ijoic2JlbmNpYyIsImEiOiJjazg0dnJzangwMGhxM2ZudzcyZGowZDVoIn0.qB5E36ZD3QkceugGRebfmw';
-  var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v11'
-  });
+	// Modified example from this source: https://docs.mapbox.com/mapbox-gl-js/example/wms/
+	// Be sure to insert your OWN mapbox token.
+	mapboxgl.accessToken = 'sk.eyJ1Ijoic2JlbmNpYyIsImEiOiJjazhhNWExenYwY2FxM2ZsOW90czZmczZzIn0.eMiPTSj4lf2ftss7PRVVVQ';
+    var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/light-v10',
+        zoom: 3,
+        center: [-100.0, 50.0]
+    });
+
+    map.on('load', function() {
+        map.addSource('wms-test-source', {
+            'type': 'raster',
+            'tiles': [
+                'https://luna.flemingcollege.ca/arcgis/rest/services/DemoMapExample/MapServer/export?bbox={bbox-epsg-3857}&bboxSR=EPSG%3A3857&layers=0&layerDefs=&size=256%2c256&imageSR=&format=png&transparent=true&dpi=&time=&layerTimeOptions=&dynamicLayers=&gdbVersion=&mapScale=&f=image'
+            ],
+            'tileSize': 256
+        });
+        map.addLayer(
+            {
+                'id': 'wms-test-layer',
+                'type': 'raster',
+                'source': 'wms-test-source',
+                'paint': {}
+            },
+            'aeroway-line'
+        );
+    });
 </script>
+
+</body>
+</html>
