--- a/MapBoxTrial.html
+++ b/MapBoxTrial.html
@@ -16,7 +16,7 @@
 <script>
 	// Modified example from this source: https://docs.mapbox.com/mapbox-gl-js/example/wms/
 	// Be sure to insert your OWN mapbox token.
-	mapboxgl.accessToken = 'sk.eyJ1Ijoic2JlbmNpYyIsImEiOiJjazhhNWExenYwY2FxM2ZsOW90czZmczZzIn0.eMiPTSj4lf2ftss7PRVVVQ';
+	mapboxgl.accessToken = 'pk.eyJ1Ijoic2JlbmNpYyIsImEiOiJjazg0dnJzangwMGhxM2ZudzcyZGowZDVoIn0.qB5E36ZD3QkceugGRebfmw';
     var map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/light-v10',
