--- a/GeoJsnMapbox.html
+++ b/GeoJsnMapbox.html
@@ -52,7 +52,7 @@
         center: [-100.0, 50.0]
     });
     // Modify this to place your own map service URL here. Show one or more provinces--do not just show Ontario like this example. 
-    var url = 'https://sbencic.duckdns.org/arcgis/rest/services/ClassWork/MapboxTrial/MapServer/0/query?where=PRNAME%3D%27Ontario%27&returnGeometry=true&returnTrueCurves=false&returnExtentOnly=false&f=geojson';
+    var url = 'https://sbencic.duckdns.org/arcgis/rest/services/ClassWork/MapboxTrial/MapServer/0/query?where=PRNAME%3D%27Ontario%27%4F%52PRNAME%3D%27Quebec / Québec%27%4F%52PRNAME%3D%27Nunavut%27%4F%52PRNAME%3D%27Northwest Territories / Territoires du Nord-Ouest%27%4F%52PRNAME%3D%27Yukon%27%4F%52PRNAME%3D%27British Columbia / Colombie-Britannique%27%4F%52PRNAME%3D%27Alberta%27%4F%52PRNAME%3D%27Saskatchewan%27%4F%52PRNAME%3D%27Manitoba%27%4F%52PRNAME%3D%27Ontario%27%4F%52PRNAME%3D%27Quebec / Québec%27%4F%52PRNAME%3D%27New Brunswick / Nouveau-Brunswick%27%4F%52PRNAME%3D%27Nova Scotia / Nouvelle-Écosse%27%4F%52PRNAME%3D%27Prince Edward Island / Île-du-Prince-Édouard%27%4F%52PRNAME%3D%27Newfoundland and Labrador / Terre-Neuve-et-Labrador%27&returnGeometry=true&returnTrueCurves=false&returnExtentOnly=false&f=geojson';
     map.on('load', function() {
         window.setInterval(function() {
             map.getSource('canada').setData(url);
